--- a/css/index.css
+++ b/css/index.css
@@ -1,69 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
-
-/*
-selector {
-    property: value;
-    property2: value2;
-}
-*/
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-
 :root {
-    font-family: 'DotGothic16', sans-serif;;
-}
-
-h1 {
-    text-transform: uppercase;
-    margin: 0;
-    text-align: center;
+    --main-color: black;
+    --accent-color: rgb(27, 120, 201);
+    --highlight-color: red;
 }
 
 .logo {
-    text-transform: uppercase;
+    color: var(--highlight-color);
+    border: 10px solid var(--accent-color);
 }
-
-img {
-    width: 100%;
-    display: block;
-}
-
-header .banner {
-    background-image: url(../img/baby-yoda.svg);
-    background-size: cover;
-    background-position: center;
-    min-height: 400px;
+.menu {
+    margin-top: 20px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
-
-header nav .menu a:hover {
-    font-weight: bold;
-}
-
-.hello {
-    text-align: center;
+.menu a {
+    border: 10px solid var(--accent-color);
+    color: var(--main-color:);
     display: block;
-    margin-top: -100px;
-    font-size: 2rem;
-    color: bisque;
+    padding: 5px;
+    text-decoration: none;
+    text-transform: uppercase;
+
 }
 
-#products {
-    color: red;
+main div.products {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
 }
-
-.products-header {
-    color: green;
-}
-
-
-p::first-letter {
-    font-size: 3rem;
+@media (min-width: 800px) {
+    main div.products {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
